SUBDIRS = src tests

EXTRA_DIST = .gitignore \
	Vagrantfile \
	provisioning/bootconfig.sh \
	provisioning/bootstrap.sh \
	provisioning/logrotate.d/example \
	provisioning/nginx/LICENSE \
	provisioning/nginx/conf.d/example.conf \
	provisioning/nginx/example.conf \
	provisioning/nginx/index.html \
	provisioning/nginx/sites-available/example \
	provisioning/systemd/example.service
